Fix embed width on small screen.

--- a/styles/blocks/embed.styl
+++ b/styles/blocks/embed.styl
@@ -2,18 +2,18 @@
 
 .embed {
 	space(2);
-	
+
 	&__content {
 		margin-bottom: 2px;
 	}
-	
+
 	&__description {
 		font-size: smaller_font;
 	}
-	
+
 	+below(1200px) {
 		&__content {
-			margin-side: -(spacer);
+			margin-side: -(spacer*1.5);
 		}
 	}
 }
